<resources>
    <string name="app_name">SutoriKu</string>
    <string name="title_home">Home</string>
    <string name="title_sutori">Tambah Sutori</string>
    <string name="title_notifications">Pengaturan User</string>
    <string name="title_welcome_page">Selamat Datang di Sutoriku\n</string>
    <string name="message_welcome_page">Disini tempat untuk bercerita apa pun!\n</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="app_icon">App Icon</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="register">Daftar</string>
    <string name="sudah_siap_untuk_bercerita">Sudah siap untuk bercerita?</string>
    <string name="masukkan_dulu_datamu_ya">masukkan dulu datamu ya</string>
    <string name="string_login">Masuk</string>
    <string name="icon_switch_camera">Putar kamera</string>
    <string name="icon_take_photo">Ambil foto</string>
    <string name="add_sutori">Tambah Sutori</string>
    <string name="ceritakan_pengalamanmu">ceritakan pengalamanmu</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">kamera</string>
    <string name="create_by_name">Nama</string>
    <string name="story_description">deskripsi</string>
    <string name="dialog_login_succes">Login berhasil</string>>
    <string name="message_login_failed">Login gagal, silakan coba lagi.</string>
    <string name="login_failed_dialog">Ada masalah untuk mengakses server</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="register_succes">registrasi sukses</string>
    <string name="register_error">registasi gagal</string>
    <string name="register_error_with_error_messege">Ada masalah untuk mengakses server</string>
    <string name="failed_start_camera">gagal memulai kamera</string>
    <string name="failed_take_photo">gagal mengambil foto</string>
    <string name="photo_picker_title">Pilih poto</string>
    <string name="no_photo_selected">tidak ada yang dipilih</string>
    <string name="camera_title">Kamera</string>
    <string name="acces_granted">Izin Diberikan</string>
    <string name="acces_denied">Izin Ditolak</string>
    <string name="pick_or_capture_photo_dialog">Silakan ambil gambar dahulu</string>
    <string name="add_story_failed_dialog">"Terjadi Kesalahan: %1$s "</string>
    <string name="logout">Keluar</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="username">Username :</string>
    <string name="namauser">TextView</string>
    <string name="logout_title">Keluar</string>
    <string name="logout_confirmation">Yakin Ingin Keluar?</string>
    <string name="yes">iya</string>
    <string name="no">tidak</string>
    <string name="failed_load_story">gagal memuat cerita</string>
    <string name="failed_load_story_detail">gagal memuat cerita</string>
    <string name="invalid_email">Email Tidak Valid</string>
    <string name="password_error_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="tampilkan_lokasi">Tampilkan Lokasi</string>
    <string name="location_permission_denied">Akses Lokasi Ditolak</string>
    <string name="location_not_found">Lokasi Tidak ditemukan</string>
    <string name="text_location">Lokasi</string>
    <string name="no_location_story">Tidak ada lokasi</string>
    <string name="item_error_text">gagal memuat cerita</string>
    <string name="retry_item_story">coba lagi</string>

</resources>